svn merge -r 15836:16953 https://source.sakaiproject.org/svn/sam/trunk U    samigo-api/src/java/org/sakaiproject/tool/assessment/data/ifc/assessment/ItemAttachmentIfc.java U    samigo-pack/src/java/org/sakaiproject/tool/assessment/shared/SakaiBootStrap.java U    samigo-app/src/java/test/org/sakaiproject/tool/assessment/ui/listener/FakeBeginDeliveryActionListener.java U    samigo-app/src/java/org/sakaiproject/jsf/util/SamigoJsfTool.java U    samigo-app/src/java/org/sakaiproject/tool/assessment/devtools/SubstituteProperties.java U    samigo-app/src/java/org/sakaiproject/tool/assessment/settings/ApplicationSettings.java U    samigo-app/src/java/org/sakaiproject/tool/assessment/jsf/tag/TagUtil.java U    samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/SelectIndexMessages.properties U    samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/AssessmentSettingsMessages.properties U    samigo-app/src/java/org/sakaiproject/tool/assessment/ui/servlet/InitMimeTypes.java U    samigo-app/src/java/org/sakaiproject/tool/assessment/ui/servlet/delivery/DownloadAllMediaServlet.java U    samigo-app/src/java/org/sakaiproject/tool/assessment/ui/servlet/delivery/ShowMediaServlet.java U    samigo-app/src/java/org/sakaiproject/tool/assessment/ui/servlet/delivery/UploadAudioMediaServlet.java U    samigo-app/src/java/org/sakaiproject/tool/assessment/ui/servlet/delivery/LoginServlet.java U    samigo-app/src/java/org/sakaiproject/tool/assessment/ui/bean/select/SelectAssessmentBean.java U    samigo-app/src/java/org/sakaiproject/tool/assessment/ui/bean/author/TemplateBean.java U    samigo-app/src/java/org/sakaiproject/tool/assessment/ui/bean/author/ItemAuthorBean.java U    samigo-app/src/java/org/sakaiproject/tool/assessment/ui/bean/author/SectionBean.java U    samigo-app/src/java/org/sakaiproject/tool/assessment/ui/bean/author/PublishedAssessmentSettingsBean.java U    samigo-app/src/java/org/sakaiproject/tool/assessment/ui/bean/author/AssessmentSettingsBean.java U    samigo-app