@@ -23,6 +23,7 @@
 package org.sakaiproject.tool.assessment.services.assessment;
 
 import java.util.ArrayList;
+import java.util.Date;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Set;
@@ -31,6 +32,7 @@ import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 
 import org.sakaiproject.tool.assessment.data.dao.assessment.AssessmentTemplateData;
+import org.sakaiproject.tool.assessment.data.dao.assessment.ItemAttachment;
 import org.sakaiproject.tool.assessment.data.ifc.assessment.AssessmentIfc;
 import org.sakaiproject.tool.assessment.data.ifc.assessment.AssessmentBaseIfc;
 import org.sakaiproject.tool.assessment.data.ifc.assessment.AssessmentAttachmentIfc;
@@ -47,7 +49,6 @@ import org.sakaiproject.tool.assessment.facade.SectionFacade;
 import org.sakaiproject.tool.assessment.facade.TypeFacade;
 import org.sakaiproject.tool.assessment.services.PersistenceService;
 import org.sakaiproject.content.cover.ContentHostingService;
-import org.sakaiproject.content.api.ContentResourceEdit;
 
 /**
  * The AssessmentService calls the service locator to reach the
@@ -378,7 +379,7 @@ public void deleteAssessment(Id assessmentId)
 
   public boolean assessmentTitleIsUnique(String assessmentBaseId, String title, boolean isTemplate) {
     return PersistenceService.getInstance().getAssessmentFacadeQueries().
-           assessmentTitleIsUnique(new Long(assessmentBaseId), title, new Boolean(isTemplate));
+           assessmentTitleIsUnique(new Long(assessmentBaseId), title, Boolean.valueOf(isTemplate));
   }
 
   public List getAssessmentByTemplate(String templateId){
